clane template directory and html

--- a/templates/main.html
+++ b/templates/main.html
@@ -57,7 +57,7 @@
                         </div>
                         
                         <div class="col-lg-6">
-                            <a href="/playlists">
+                            <a href="/playlist">
                                 <div class="d-flex p-4 rounded mb-4 bg-white">
                                     <div class="col-3 row align-items-center">
                                         <img src="../static/img/mainImg/LP.png" class="img-fluid rounded-circle w-100" alt="">
@@ -92,7 +92,7 @@
                             </a>
                         </div>
                         <div class="col-lg-6">
-                            <a href="/songlist">
+                            <a href="/recommendation">
                                 <div class="d-flex p-4 rounded mb-4 bg-white">
                                     <div class="col-3 row align-items-center">
                                         <img src="../static/img/mainImg/heart.png" class="img-fluid rounded w-100" alt="">
