change all the titles

--- a/templates/features/global_and_kr_tendency.html
+++ b/templates/features/global_and_kr_tendency.html
@@ -1,5 +1,5 @@
 {% extends "layout/layout.html" %}
-{% block title %} playlist {% endblock %}
+{% block title %}WEEKLY HOT TRACKS in 2 way{% endblock %}
 {% block content %}
 
 
