--- a/templates/features/global_top_tracks.html
+++ b/templates/features/global_top_tracks.html
@@ -1,7 +1,5 @@
-
-
 {% extends "layout/recmmdLayout.html" %}
-{%block title%} Global Top Tracks {% endblock %}
+{%block title%}Global Top tracks{% endblock %}
 {% block content %}
 
 <!-- Splitting.js 라이브러리 포함 -->
