--- a/templates/features/playlist.html
+++ b/templates/features/playlist.html
@@ -1,5 +1,5 @@
 {% extends "layout/layout.html" %}
-{% block title %} Playlists {% endblock %}
+{% block title %}Your Playlist{% endblock %}
 {% block content %}
 
 
@@ -7,11 +7,57 @@
     <div class="container-fluid page-header py-5">
         <h1 class="text-center text-white display-6">Cart</h1>
         <ol class="breadcrumb justify-content-center mb-0">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="/home">Home</a></li>
             <li class="breadcrumb-item"><a href="#">Playlists</a></li>
         </ol>
     </div>
     <!-- Single Page Header End -->
+
+    <!-- playlist Start-->
+    <div class="container-fluid fruite py-5">
+        <div class="container py-5">
+            <div class="tab-class text-center">
+                <div class="tab-content">
+                    <div id="tab-1" class="tab-pane fade show p-0 active">
+                        <div class="row g-4">
+                            <div class="col-lg-12">
+                                <div class="row g-4">
+                                    {% if playlists %} 
+                                    {% for playlist in playlists %}
+                                    <div class="col-md-6 col-lg-4 col-xl-3">
+                                        <div class="rounded position-relative fruite-item align-items-center">
+                                            <div class="fruite-img">
+                                                <img src="{{ playlist.images[0] }}" class="img-fluid w-100 rounded-top" alt="">
+                                            </div>
+                                            <!-- <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">HOT</div> -->
+                                            <div class="p-4 border border-secondary border-top-0 rounded-bottom">
+                                                <h4>{{ playlist.name }}</h4>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                    {% else %}
+                                    <div class="alert alert-danger d-flex align-items-center" role="alert">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16">
+                                            <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5m.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                                            </svg>
+                                        <div>
+                                        No playlists found.
+                                        </div>
+                                    </div>
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>      
+        </div>
+    </div>
+    <!-- playlist End-->
+        
+
+
 
     <div class="container-fluid py-5">
         <div class="container py-5">
@@ -48,7 +94,6 @@
                             No playlists found.
                             </div>
                         </div>
-                            
                         {% endif %}
                         </tr>
                     </tbody>
