--- a/templates/features/songs.html
+++ b/templates/features/songs.html
@@ -1,5 +1,5 @@
 {% extends "layout/layout.html" %}
-{% block title %} Playlists {% endblock %}
+{% block title %}Most Listened Song{% endblock %}
 {% block content %}
 
 
