--- a/templates/features/global_and_kr_tendency.html
+++ b/templates/features/global_and_kr_tendency.html
@@ -5,10 +5,10 @@
 
     <!-- Single Page Header start -->
     <div class="container-fluid page-header py-5">
-        <h1 class="text-center text-white display-6">Weekly hot tracks</h1>
+        <h1 class="text-center text-white display-6">WEEKLY HOT TRACKS in 2 way</h1>
         <ol class="breadcrumb justify-content-center mb-0">
             <li class="breadcrumb-item"><a href="/home">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Weekly hot tracks</a></li>
+            <li class="breadcrumb-item"><a href="#" style="color:white;">WEEKLY HOT TRACKS in 2 way</a></li>
         </ol>
     </div>
     <!-- Single Page Header End -->
