--- a/templates/features/songs.html
+++ b/templates/features/songs.html
@@ -1,23 +1,23 @@
 {% extends "layout/layout.html" %}
-{% block title %}Most Listened Song{% endblock %}
+{% block title %}Most Listened Songs{% endblock %}
 {% block content %}
 
 
     <!-- Single Page Header start -->
     <div class="container-fluid page-header py-5">
-        <h1 class="text-center text-white display-6">Cart</h1>
+        <h1 class="text-center text-white display-6">Most Listened Songs</h1>
         <ol class="breadcrumb justify-content-center mb-0">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Most listened songs</a></li>
+            <li class="breadcrumb-item"><a href="/home">Home</a></li>
+            <li class="breadcrumb-item"><a href="#" style="color:white;">Most Listened Songs</a></li>
         </ol>
     </div>
     <!-- Single Page Header End -->
 
     <div class="container-fluid py-5">
         <div class="container py-5">
-            <button class="btn btn-primary" onclick="goBack()">Back</button>
+            <!-- <button class="btn btn-primary" onclick="goBack()">Back</button> -->
             <div class="table-responsive">
-                <table class="table">
+                <table class="table" style="font-size: larger;">
                     <thead>
                         <tr>
                         <th scope="col"></th>
@@ -33,7 +33,7 @@
                             <th scope="row">
                                 {% for image in track['album_images'] %}
                                 <div class="d-flex align-items-center">
-                                    <img src="{{ image }}" alt="Playlist Image" class="img-fluid me-5 rounded" style="width: 80px; height: 80px;">
+                                    <img src="{{ image }}" alt="Playlist Image" class="img-fluid me-5 rounded" style="width: 120px; height: 120px;">
                                 </div>
                                 {% endfor %}
                             </th>
