--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -67,7 +67,7 @@
                     </button>
                     <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                         <div class="navbar-nav mx-auto">
-                            <a href="/" class="nav-item nav-link active">Home</a>
+                            <a href="/home" class="nav-item nav-link active">Home</a>
 
                             <a href="/playlists" class="nav-item nav-link">Playlists</a>
                             <div class="nav-item dropdown">
@@ -80,7 +80,7 @@
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Recommended</a>
                                 <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                    <a href="/songlist" class="dropdown-item">Songs</a>
+                                    <a href="/recommendation" class="dropdown-item">Songs</a>
                                     <a href="/global_top_tracks" class="dropdown-item">TOP songs</a>
                                 </div>
                             </div>
