--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -69,7 +69,7 @@
                         <div class="navbar-nav mx-auto">
                             <a href="/home" class="nav-item nav-link active">Home</a>
 
-                            <a href="/playlists" class="nav-item nav-link">Playlists</a>
+                            <a href="/playlist" class="nav-item nav-link">Playlists</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Most listened</a>
                                 <div class="dropdown-menu m-0 bg-secondary rounded-0">
