Update layout ( admin button -> reviewList)

--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -53,7 +53,7 @@
                         <small class="me-3"><i class="fas fa-envelope me-2 text-secondary"></i><a href="#" class="text-white">Team G.O.A.T</a></small>
                     </div>
                     <div class="top-link pe-2">
-                        <a href="#" class="text-white"><small class="text-white mx-2">Admin</small>/</a>
+                        <a href="/reviewList" class="text-white"><small class="text-white mx-2">Admin</small>/</a>
                         <a href="/review" class="text-white"><small class="text-white mx-2">Post Review</small>/</a>
                         <a href="/" class="text-white"><small class="text-white ms-2">Back To Start To Login In Other Account</small></a>
                     </div>
@@ -67,9 +67,9 @@
                     </button>
                     <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                         <div class="navbar-nav mx-auto">
-                            <a href="/home" class="nav-item nav-link active">Home</a>
+                            <a href="/" class="nav-item nav-link active">Home</a>
 
-                            <a href="/playlist" class="nav-item nav-link">Playlists</a>
+                            <a href="/playlists" class="nav-item nav-link">Playlists</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Most listened</a>
                                 <div class="dropdown-menu m-0 bg-secondary rounded-0">
@@ -80,7 +80,7 @@
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Recommended</a>
                                 <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                    <a href="/recommendation" class="dropdown-item">Songs</a>
+                                    <a href="/songlist" class="dropdown-item">Songs</a>
                                     <a href="/global_top_tracks" class="dropdown-item">TOP songs</a>
                                 </div>
                             </div>
