--- a/templates/review_edit.html
+++ b/templates/review_edit.html
@@ -21,17 +21,18 @@
                 <div class="col-12">
                     <div class="text-center mx-auto" style="max-width: 700px;">
                         <h1 class="text-primary">How was SOTS?</h1>
-                        <p class="mb-4">Please give us short review after using out platform! &emsp;<a href="/home">Go back</a></p>
+                        <p class="mb-4">please give us short review after using out platform! &emsp;<a href="/home">go back</a></p>
                     </div>
                 </div>
 
                 <div class="col-lg-12">
                     <div style="padding: 20px"></div>
-                    <form action="/review" class="" method="POST" enctype="multipart/form-data">
-                        <input type="text" class="w-100 form-control border-0 py-3 mb-4" placeholder="이름" name="writer_name" required>
-                        <textarea class="w-100 form-control border-0 mb-4" rows="5" cols="10" placeholder="Your Message" name="content" maxlength="30" required></textarea>
+                    <form action="{{ url_for('review_edit', id=data._id) }}t" class="" method="POST">
+                        <input type="hidden" value="{{data._id}}" name="id">
+                        <input type="text" value="{{data.writer_name}}" class="w-100 form-control border-0 py-3 mb-4" placeholder="이름" name="writer_name_edit" required>
+                        <textarea class="w-100 form-control _idborder-0 mb-4" rows="5" cols="10" placeholder="Your Message" name="content_edit" required>{{data.content}}</textarea>
                         <div style="padding: 30px"></div>
-                        <button class="w-100 btn form-control border-secondary py-3 bg-white text-primary " type="submit">Post</button>
+                        <button class="w-100 btn form-control border-secondary py-3 bg-white text-primary " type="submit">post</button>
                     </form>
                 </div>
 
@@ -39,5 +40,6 @@
         </div>
     </div>
 </div>
+
 
 {% endblock %}
