네브바 이름 변경

--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -68,7 +68,7 @@
                         <div class="navbar-nav mx-auto">
                             <a href="/" class="nav-item nav-link active">Home</a>
 
-                            <a href="/playlists" class="nav-item nav-link">Playlists</a>
+                            <a href="/playlist" class="nav-item nav-link">Playlists</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Most listened</a>
                                 <div class="dropdown-menu m-0 bg-secondary rounded-0">
@@ -79,7 +79,7 @@
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Recommended</a>
                                 <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                    <a href="/songlist" class="dropdown-item">Songs</a>
+                                    <a href="/recommendation" class="dropdown-item">Songs</a>
                                     <a href="/global_top_tracks" class="dropdown-item">TOP songs</a>
                                 </div>
                             </div>
