--- a/templates/layout/admin_layout.html
+++ b/templates/layout/admin_layout.html
@@ -67,7 +67,7 @@
                     </button>
                     <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                         <div class="navbar-nav mx-auto">
-                            <a href="/" class="nav-item nav-link active">Home</a>
+                            <a href="/home" class="nav-item nav-link active">Home</a>
 
                             <a href="/playlist" class="nav-item nav-link">Playlists</a>
                             <div class="nav-item dropdown">
